@@ -1,5 +1,7 @@
 2018-02-01  Carl Hetherington  <cth@carlh.net>
 
+	* Don't try to use video streams for which we have no codec (#1184).
+
 	* Updated nl_NL translation from Rob van Nieuwkerk.
 
 	* Version 2.11.47 released.
